# Widget-Studio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  vercel.json
.github/workflows/: release.yml
api/: index.py
desktop/: README.md  SYSTEM_DESIGN.md  UI_DESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  startup.rs  tray.rs
desktop/src/hooks/: useSystemInfo.ts
desktop/src/lib/: aiClient.ts  colors.ts  customWidget.ts  storage.ts  storeSync.ts  tauri.ts  updater.ts  widgetAgent.ts
desktop/src/store/: aiProviderStore.ts  authStore.ts  managerStore.ts  widgetStore.ts
desktop/src/types/: browserWidget.ts  customWidget.ts  widget.ts
docs/: custom-widget-guide.md
scripts/: build-msi-and-update-site.ps1  build-msi.ps1  build-updater-manifest.ps1
server/: .env.example  README.md  ai.py  auth.py  config.py  database.py  init_db.py  main.py  models.py  requirements.txt  schemas.py  vercel.json
server/api/: index.py
website/: README.md  SYSTEM_DESIGN.md  UI_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
website/public/: WidgetStudioInstaller.msi  installer.json
website/src/: App.tsx  index.css
website/src/lib/: customWidget.ts  storage.ts  storeSync.ts  tauri.ts  widgetActions.ts  widgetAgent.ts
website/src/store/: authStore.ts  routeStore.ts  settingsStore.ts  widgetStore.ts
(+47 files in other folders)
