[package]
name = "windows-11-desktop-widgets"
version = "0.1.0"
description = "Lightweight Windows 11 desktop widget host"
authors = ["Codex"]
edition = "2021"

[lib]
name = "windows_11_desktop_widgets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
